Add event countdown and sections for events, speakers, sponsors, and contact information

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ahouba 25</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- Preloader Section -->
     <div id="preloader">
@@ -59,7 +61,8 @@
         <div id="parallaxtxt">
             <p id="txt">
                 <span class="large-text">GEAR <br>UP!</span><br>
-                <span class="short-text">ULTIMATE <br>TECH <br>EXTRAVAGANZA! <br>....<a href="#guest-heading" class="button">Go to Section</a></span>
+                <span class="short-text">ULTIMATE <br>TECH <br>EXTRAVAGANZA! <br>....<a href="#guest-heading"
+                        class="button">Go to Section</a></span>
             </p>
         </div>
         <div class="parallaximg">
@@ -134,6 +137,373 @@
 
         </div>
     </div>
+
+    <!-- Event Countdown Section -->
+    <div class="countdown-section">
+        <div class="countdown">
+            <div class="countdown-item">
+                <div class="countdown-number" id="days">00</div>
+                <div class="countdown-label">Days</div>
+            </div>
+            <div class="countdown-item">
+                <div class="countdown-number" id="hours">00</div>
+                <div class="countdown-label">Hours</div>
+            </div>
+            <div class="countdown-item">
+                <div class="countdown-number" id="minutes">00</div>
+                <div class="countdown-label">Minutes</div>
+            </div>
+            <div class="countdown-item">
+                <div class="countdown-number" id="seconds">00</div>
+                <div class="countdown-label">Seconds</div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Events Section -->
+    <div class="events-section">
+        <h2 class="section-title">Featured Events</h2>
+        <div class="events-grid">
+            <div class="event-card">
+                <div class="event-icon">🤖</div>
+                <h3>Robotics Challenge</h3>
+                <p>Build and program robots to navigate complex challenges and compete against other teams.</p>
+                <a href="#" class="event-link">Learn More</a>
+            </div>
+            <div class="event-card">
+                <div class="event-icon">💻</div>
+                <h3>Hackathon</h3>
+                <p>24-hour coding marathon to create innovative solutions to real-world problems.</p>
+                <a href="#" class="event-link">Learn More</a>
+            </div>
+            <div class="event-card">
+                <div class="event-icon">🎮</div>
+                <h3>Gaming Tournament</h3>
+                <p>Compete in popular esports titles and show off your gaming skills.</p>
+                <a href="#" class="event-link">Learn More</a>
+            </div>
+            <div class="event-card">
+                <div class="event-icon">🔬</div>
+                <h3>Tech Workshop</h3>
+                <p>Hands-on workshops covering emerging technologies like AI, VR, and more.</p>
+                <a href="#" class="event-link">Learn More</a>
+            </div>
+        </div>
+        <div class="view-all-container">
+            <a href="#" class="view-all-btn">View All Events</a>
+        </div>
+    </div>
+
+    <!-- Speakers Section -->
+    <div class="events-section">
+    <h2 class="section-title">Featured Speakers</h2>
+    <div class="speakers-container">
+        <div class="speaker-card">
+            <div class="speaker-image">
+                <img src="https://via.placeholder.com/150" alt="Speaker One">
+            </div>
+            <div class="speaker-info">
+                <h3>Speaker One</h3>
+                <div class="speaker-title">Chief Innovation Officer</div>
+                <p class="speaker-bio">An expert in emerging technologies and digital transformation strategies.</p>
+            </div>
+        </div>
+        <div class="speaker-card">
+            <div class="speaker-image">
+                <img src="images/speaker2.jpg" alt="Speaker Two">
+            </div>
+            <div class="speaker-info">
+                <h3>Speaker Two</h3>
+                <div class="speaker-title">Lead Developer</div>
+                <p class="speaker-bio">Specializes in scalable web applications and cloud infrastructure.</p>
+            </div>
+        </div>
+        <div class="speaker-card">
+            <div class="speaker-image">
+                <img src="images/speaker3.jpg" alt="Speaker Three">
+            </div>
+            <div class="speaker-info">
+                <h3>Speaker Three</h3>
+                <div class="speaker-title">Data Scientist</div>
+                <p class="speaker-bio">Focuses on machine learning models and data-driven decision-making.</p>
+            </div>
+        </div>
+    </div>
+    <div class="view-more-container">
+        <a href="#" class="view-all-btn">View All Speakers</a>
+    </div>
+</div>
+
+
+    <!-- Sponsors Section -->
+    <div class="sponsors-section">
+        <h2 class="section-title">Our Sponsors</h2>
+        <p class="section-description">We’re grateful for the trust of industry leaders who help make Ahouba 2.0 a
+            thriving ground for innovation.</p>
+        <div class="sponsors-grid">
+            <div class="sponsor-card">
+                <img src="images/google.png" alt="Google India">
+                <h3>Google India</h3>
+                <p>Title Sponsor</p>
+            </div>
+            <div class="sponsor-card">
+                <img src="images/tata.png" alt="Tata Technologies">
+                <h3>Tata Technologies</h3>
+                <p>Gold Sponsor</p>
+            </div>
+            <div class="sponsor-card">
+                <img src="images/nasscom.png" alt="NASSCOM Foundation">
+                <h3>NASSCOM Foundation</h3>
+                <p>Silver Sponsor</p>
+            </div>
+        </div>
+        <div class="sponsor-cta">
+            <h3>Become a Sponsor</h3>
+            <p>Support India’s next tech revolution. Partner with IIIT Manipur for Ahouba 2.0 and inspire innovation in
+                the Northeast.</p>
+            <a href="#" class="view-all-btn">Learn More</a>
+        </div>
+    </div>
+
+
+    <!-- Contact Section -->
+    <div class="contact-section">
+        <div class="contact-container">
+            <div class="contact-info">
+                <h2>Get In Touch</h2>
+                <p>Reach out to the organizing team of Ahouba 2.0 for partnerships, queries, or volunteering
+                    opportunities.</p>
+                <div class="contact-details">
+                    <div class="contact-item">
+                        <i class="fa fa-map-marker"></i>
+                        <p>Indian Institute of Information Technology, Manipur<br>Mantripukhri, Imphal, Manipur – 795002
+                        </p>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fa fa-envelope"></i>
+                        <p>ahouba@iiitmanipur.ac.in</p>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fa fa-phone"></i>
+                        <p>+91 93664 12345</p>
+                    </div>
+                </div>
+                <div class="social-links">
+                    <a href="https://facebook.com/iiitmanipur" class="social-icon"><i class="fa fa-facebook"></i></a>
+                    <a href="https://twitter.com/iiitmanipur" class="social-icon"><i class="fa fa-twitter"></i></a>
+                    <a href="https://instagram.com/iiitmanipur" class="social-icon"><i class="fa fa-instagram"></i></a>
+                    <a href="https://linkedin.com/school/iiitmanipur" class="social-icon"><i
+                            class="fa fa-linkedin"></i></a>
+                </div>
+            </div>
+            <!-- Optional: Add a contact form here -->
+        </div>
+    </div>
+
+
+    <!-- Map Section -->
+    <div class="map-section">
+        <div class="map-container">
+            <div class="placeholder-map">
+                <i class="fa fa-map-marker"></i>
+                <p>Event Location</p>
+                <p class="map-caption">Interactive map will be displayed here</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-column">
+                <img src="images/AHOUBA_LOGO.svg" alt="Ahouba Logo" class="footer-logo">
+                <p>Ahouba 2.0 is the ultimate tech extravaganza featuring cutting-edge workshops, competitions, and
+                    networking opportunities for tech enthusiasts of all levels.</p>
+            </div>
+            <div class="footer-column">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Events</a></li>
+                    <li><a href="#">Speakers</a></li>
+                    <li><a href="#">Sponsors</a></li>
+                    <li><a href="#">Team</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Subscribe</h3>
+                <p>Stay updated with the latest news and announcements about Ahouba 2.0.</p>
+                <form class="newsletter-form" id="newsletterForm">
+                    <input type="email" placeholder="Your Email" required>
+                    <button type="submit"><i class="fa fa-paper-plane"></i></button>
+                </form>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="copyright">
+                &copy; 2025 Ahouba 2.0. All rights reserved.
+            </div>
+            <div class="footer-links">
+                <a href="#">Privacy Policy</a>
+                <a href="#">Terms of Service</a>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Registration Modal -->
+    <div class="modal" id="registrationModal">
+        <div class="modal-content">
+            <span class="close-modal" id="closeModal">&times;</span>
+            <h2>Register for Ahouba 2.0</h2>
+            <p>Fill out the form below to register for the event. Early bird registration ends soon!</p>
+            <form class="modal-form" id="registrationForm">
+                <div class="form-group">
+                    <label for="regName">Full Name</label>
+                    <input type="text" id="regName" name="regName" required>
+                </div>
+                <div class="form-group">
+                    <label for="regEmail">Email</label>
+                    <input type="email" id="regEmail" name="regEmail" required>
+                </div>
+                <div class="form-group">
+                    <label for="regPhone">Phone Number</label>
+                    <input type="tel" id="regPhone" name="regPhone" required>
+                </div>
+                <div class="form-group">
+                    <label for="regEvents">Interested Events</label>
+                    <input type="text" id="regEvents" name="regEvents" placeholder="e.g. Hackathon, Robotics Challenge">
+                </div>
+                <button type="submit" class="submit-btn">Complete Registration</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Additional Scripts -->
+    <script>
+        // Countdown Timer
+        const countdownDate = new Date("July 15, 2025 09:00:00").getTime();
+
+        function updateCountdown() {
+            const now = new Date().getTime();
+            const distance = countdownDate - now;
+
+            if (distance < 0) {
+                document.querySelector('.countdown').innerHTML = '<div class="event-live">Event Live Now!</div>';
+                return;
+            }
+
+            const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+            const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+            document.getElementById("days").innerHTML = days.toString().padStart(2, '0');
+            document.getElementById("hours").innerHTML = hours.toString().padStart(2, '0');
+            document.getElementById("minutes").innerHTML = minutes.toString().padStart(2, '0');
+            document.getElementById("seconds").innerHTML = seconds.toString().padStart(2, '0');
+        }
+
+        // Update countdown every second
+        setInterval(updateCountdown, 1000);
+        updateCountdown();
+
+        // Toggle mobile menu
+        function toggleMenu() {
+            const navbar = document.getElementById("navbar");
+            navbar.classList.toggle("show");
+        }
+
+        // Toggle image overlay
+        function toggleOverlay(element) {
+            element.classList.toggle("active");
+        }
+
+        // Modal functionality
+        const modal = document.getElementById("registrationModal");
+        const closeModal = document.getElementById("closeModal");
+
+        // Open modal when register button is clicked
+        document.querySelectorAll('.register-btn').forEach(btn => {
+            btn.addEventListener('click', function (e) {
+                e.preventDefault();
+                modal.style.display = "flex";
+            });
+        });
+
+        // Close modal when X is clicked
+        if (closeModal) {
+            closeModal.addEventListener('click', function () {
+                modal.style.display = "none";
+            });
+        }
+
+        // Close modal when clicking outside the modal content
+        window.addEventListener('click', function (e) {
+            if (e.target === modal) {
+                modal.style.display = "none";
+            }
+        });
+
+        // Form submissions
+        const contactForm = document.getElementById("contactForm");
+        if (contactForm) {
+            contactForm.addEventListener('submit', function (e) {
+                e.preventDefault();
+                // Here you would normally send the form data to a server
+                const formContainer = this.parentElement;
+                formContainer.innerHTML = `
+                <div class="form-success">
+                    <h3>Thank You!</h3>
+                    <p>Your message has been sent successfully. We'll get back to you soon.</p>
+                </div>
+            `;
+            });
+        }
+
+        const newsletterForm = document.getElementById("newsletterForm");
+        if (newsletterForm) {
+            newsletterForm.addEventListener('submit', function (e) {
+                e.preventDefault();
+                // Here you would normally subscribe the email to a newsletter service
+                this.innerHTML = `<p class="newsletter-success">Thanks for subscribing!</p>`;
+            });
+        }
+
+        const registrationForm = document.getElementById("registrationForm");
+        if (registrationForm) {
+            registrationForm.addEventListener('submit', function (e) {
+                e.preventDefault();
+                // Here you would normally send the registration data to a server
+                modal.innerHTML = `
+                <div class="modal-content">
+                    <span class="close-modal" onclick="document.getElementById('registrationModal').style.display='none'">&times;</span>
+                    <div class="form-success">
+                        <h3>Registration Complete!</h3>
+                        <p>Thank you for registering for Ahouba 2.0. We've sent a confirmation email with further details.</p>
+                    </div>
+                </div>
+            `;
+            });
+        }
+
+        // Scroll animation
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('active');
+                }
+            });
+        }, { threshold: 0.1 });
+
+        document.querySelectorAll('.tab').forEach(tab => {
+            observer.observe(tab);
+        });
+    </script>
+
+    <!-- Font Awesome for icons -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
 
     <!-- Linking the JavaScript -->
     <script src="function.js"></script>
@@ -249,8 +619,9 @@
 
         animate();
     </script>
-    
+
 
     <!-- -------------------------------------------------------------------------------------------------------->
 </body>
+
 </html>
